k8_manifests/istio/egress/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: httpbin-dr

spec:
  host: httpbin.org
