k8_manifests/istio/egress/serviceentry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry

metadata:
  name: httpbin-external

spec:
  hosts:
  - httpbin.org

  ports:
  - number: 80
    name: http
    protocol: HTTP

  resolution: DNS
  location: MESH_EXTERNAL
