k8_manifests/istio/egress/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: httpbin-vs

spec:
  hosts:
  - httpbin.org

  http:
  - route:
    - destination:
        host: httpbin.org
        port:
          number: 80
